--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,8 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/login.js"></script>
+    <script src="scripts/services/GoogleMap.js"></script>
+    <script src="scripts/services/Places.js"></script>
     <!-- endbuild -->	
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVXOMt8C-YH2WmgLBXh6Id4AoNuKqXs38&sensor=true"></script>
   </body>
