--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
@@ -60,6 +60,7 @@
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/services/GoogleMap.js"></script>
     <script src="scripts/services/Places.js"></script>
+    <script src="scripts/filters/nicedate.js"></script>
     <!-- endbuild -->	
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVXOMt8C-YH2WmgLBXh6Id4AoNuKqXs38&sensor=true"></script>
   </body>
