show the distance to other users in the list view

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,8 @@
     <script src="scripts/services/GoogleMap.js"></script>
     <script src="scripts/services/Places.js"></script>
     <script src="scripts/filters/nicedate.js"></script>
+    <script src="scripts/filters/nicedistance.js"></script>
     <!-- endbuild -->	
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVXOMt8C-YH2WmgLBXh6Id4AoNuKqXs38&sensor=true"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVXOMt8C-YH2WmgLBXh6Id4AoNuKqXs38&sensor=true&libraries=geometry"></script>
   </body>
 </html>
