--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
     <script src="scripts/services/Places.js"></script>
     <script src="scripts/filters/nicedate.js"></script>
     <script src="scripts/filters/nicedistance.js"></script>
+    <script src="scripts/services/Settings.js"></script>
     <!-- endbuild -->	
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVXOMt8C-YH2WmgLBXh6Id4AoNuKqXs38&sensor=true&libraries=geometry"></script>
   </body>
